--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,6 +15,9 @@
     <!-- endinject -->
     <link rel="stylesheet" href="content/css/vendor.css">
     <!-- endbuild -->
+    <!-- placeholder link to load bootswatch themes, title holds the current applied theme name-->
+	<link rel="stylesheet" href="" id="bootswatch-css" title="Default">
+	<!-- build:css assets/styles/main.css -->
     <!-- build:css content/css/main.css -->
     <link rel="stylesheet" href="content/css/main.css">
     <!-- endbuild -->
@@ -32,9 +35,23 @@
             <!-- Angular views -->
         </div>
 
-        <div class="footer" ng-cloak>
-            <p data-translate="footer">This is your footer</p>
-        </div>
+        <div class="footer">
+		    <p translate="footer" class="pull-left">This is your footer</p>
+		    <div ng-controller="BootswatchController" class="dropup pull-right">
+		        <a class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+		            <span class="glyphicon glyphicon-adjust"></span>
+		            <span class="hidden-tablet" translate="global.menu.theme">Theme</span>
+		            <b class="caret"></b>
+		        </a>
+		        <ul class="dropdown-menu" role="menu">
+		            <li class="theme-link" ng-repeat="theme in themes">
+		                
+		                <a href="" jh-switch-theme="theme">{{theme.name}}</a>
+		                
+		            </li>
+		        </ul>
+		    </div>
+		</div>
     </div>
     <noscript>
         <h1>You must enable javascript to view this page.</h1>
@@ -193,5 +210,11 @@
     <!-- endinject -->
     <!-- endbuild -->
 
+	<!-- build:js({.tmp,src/main/webapp}) scripts/app.js -->
+
+	
+	<script src="scripts/components/util/bootswatch.controller.js"></script>
+	<script src="scripts/components/util/bootswatch.directive.js"></script>
+	<script src="scripts/components/util/bootswatch.service.js"></script>
 </body>
 </html>
